--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -45,6 +45,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jk</groupId>
+            <artifactId>feihu</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
