--- a/parent/wen/pom.xml
+++ b/parent/wen/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>wev</artifactId>
+    <artifactId>wen</artifactId>
 
 
 </project>
