--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -61,6 +61,16 @@
             <artifactId>wen</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jk</groupId>
+            <artifactId>zps</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jk</groupId>
+            <artifactId>han</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
