--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -58,7 +58,7 @@
     <display-name>Archetype Created Web Application</display-name>
     <welcome-file-list>
 
-      <welcome-file>head.jsp</welcome-file>
+      <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
 
 
