--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>han</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jk</groupId>
+            <artifactId>kefu</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
