--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -65,12 +65,6 @@
         </dependency>
         <dependency>
             <groupId>com.jk</groupId>
-            <artifactId>wev</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.jk</groupId>
             <artifactId>zps</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
@@ -96,6 +90,11 @@
         <dependency>
             <groupId>com.jk</groupId>
             <artifactId>kefu</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jk</groupId>
+            <artifactId>sxj</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
